[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Events/EventMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Events/EventPage.tscn" type="PackedScene" id=3]

[node name="EventMenu" type="Panel"]
margin_right = 360.0
margin_bottom = 296.0
rect_min_size = Vector2( 360, 296 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Outline" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -1.0
margin_top = -1.0
margin_right = 361.0
margin_bottom = 297.0

[node name="ControlsRoot" type="Control" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 353.0
margin_bottom = 289.0

[node name="Header" type="Label" parent="ControlsRoot"]
margin_left = 9.0
margin_top = 16.0
margin_right = 297.0
margin_bottom = 32.0
text = "STORY"

[node name="Pages" type="Control" parent="ControlsRoot"]
margin_left = -7.0
margin_top = 25.0
margin_right = 353.0
margin_bottom = 289.0

[node name="Page01" parent="ControlsRoot/Pages" instance=ExtResource( 3 )]

[node name="NextButton" type="Button" parent="ControlsRoot"]
margin_left = 297.0
margin_top = 257.0
margin_right = 338.0
margin_bottom = 279.0
text = "NEXT"

[node name="BackButton" type="Button" parent="ControlsRoot"]
margin_left = 9.0
margin_top = 257.0
margin_right = 50.0
margin_bottom = 279.0
text = "PREV"

[node name="PageNumber" type="Label" parent="ControlsRoot"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -25.0
margin_right = 52.0
margin_bottom = -1.0
text = "1/1"
align = 1
valign = 1

[connection signal="pressed" from="ControlsRoot/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="ControlsRoot/BackButton" to="." method="_on_BackButton_pressed"]
